--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: 小鸟一然的博客（未备案）
-SEOTitle: 黄玄的博客 | Hux Blog
+title: 小鸟一然的博客（未备案）Blog
+SEOTitle: 雷惠帝博客 | sailei Blog
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
-description: "这里是 @Hux黄玄 的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
+email: sailei1234@126.com
+description: "这里是 @小鸟一然 的个人博客，与你一起发现更大的世界 | 顺便说一嘴，冯淇然喜欢王昱淇"
 keyword: "黄玄, Hux黄玄, Hux, 鬼栈, huxpro, @huxpro, 黄玄的博客, Hux Blog, 博客, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
 url: "https://huangxuan.me" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
