--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: 小鸟一然的博客（未备案）Blog
+title: 小鸟一然的博客
 SEOTitle: 雷惠帝博客 | sailei Blog
 header-img: img/home-bg.jpg
 email: sailei1234@126.com
